--- a/src/app/player/player.component.html
+++ b/src/app/player/player.component.html
@@ -1,1 +1,14 @@
-<p>player works!</p>
+@if (embedUrl) {
+  <div class="player-container">
+    <iframe
+      [src]="embedUrl"
+      title="YouTube audio player"
+      frameborder="0"
+      allow="autoplay; encrypted-media"
+      allowfullscreen>
+    </iframe>
+  </div>
+}
+@else {
+  <p>No video selected.</p>
+}
