--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -94,6 +94,10 @@ h1 {
     gap: 4px;
 }
 
+.playlist-container {
+    padding-bottom: 100px;
+}
+
 li {
     background-color: rgba(255, 255, 255, 0.03);
     padding: 12px 16px;
